projet_robot_ros2/pyqt_rcv_cam_ihm_ros2_ws/log/build_2024-12-16_18-00-38/pyqt_rcv_cam_ihm_ros2/stderr.log
  File "/home/e2023/a3ajarai/Bureau/projetRobot/pyqt_rcv_cam_ihm_ros2_ws/install/pyqt_rcv_cam_ihm_ros2/lib/python3.6/site-packages/pyqt_rcv_cam_ihm_ros2/pyqt_rcv_cam_ihm_ros2.py", line 12
    // Modes
     ^
SyntaxError: invalid syntax

